handlers for rest api